--- a/overallWorkTime/overallWorkTime.phtml
+++ b/overallWorkTime/overallWorkTime.phtml
@@ -101,7 +101,7 @@
             <label><input type="radio" name="work" value="year" onclick="formChange();"
             			<?php if($model->getWork() == 'year'){echo 'checked';}?>>年次</label>
             <label><input type="radio" name="work" value="month" onclick="formChange();"
-						<?php if($model->getWork() == 'month'){echo ' checked';}?>>月次</label>
+						<?php if($model->getWork() == 'month' || $model->getWork() == 'months'){echo ' checked';}?>>月次</label>
             <label><input type="radio" name="work" value="period" onclick="formChange();"
             			<?php if($model->getWork() == 'period'){echo ' checked';}?>>期間</label>
 
@@ -133,11 +133,12 @@
 						<table>
 							<tr class="record">
 								<td>氏名</td>
-								<td>出勤日合計</td>
+								<td>出勤日<br>合計</td>
+								<td>週平均<br>出勤日数</td>
 								<td>欠席日数</td>
 								<td>営業日数</td>
 								<td>休憩時間</td>
-								<td>労働時間合計</td>
+								<td>労働時間<br>合計</td>
 								<td>月平均<br>労働時間</td>
 								<td>週平均<br>労働時間</td>
 							</tr>
@@ -149,6 +150,7 @@
 							<tr>
 								<td><a href="../personalWorkTime/personalWorkTime.php?accountid=<?php echo $value['accountid'];?>"><?php echo $value['name'];?></a></td>
 								<td><?php echo $value['workday'];?></td>
+								<td><?php echo $value['aveWorkday']?></td>
 								<td><?php echo $value['absence'];?></td>
 								<td><?php echo $value['business'];?></td>
 								<td><?php echo $value['resttime'];?></td>
@@ -163,6 +165,7 @@
 								<tr>
 									<th>合計</th>
 									<th><?php echo $model->getSelSumArray('workday');?></th>
+									<th><?php echo $model->getSelSumArray('aveWorkday');?></th>
 									<th><?php echo $model->getSelSumArray('absence');?></th>
 									<th><?php echo $model->getSelSumArray('business');?></th>
 									<th><?php echo $model->getSelSumArray('resttime');?></th>
@@ -173,6 +176,7 @@
 							<tr>
 								<th>平均</th>
 								<th><?php echo $model->getSelAveArray('workday');?></th>
+								<th><?php echo $model->getSelAveArray('aveWorkday');?></th>
 								<th><?php echo $model->getSelAveArray('absence');?></th>
 								<th><?php echo $model->getSelAveArray('business');?></th>
 								<th><?php echo $model->getSelAveArray('resttime');?></th>
@@ -181,6 +185,72 @@
 								<th><?php echo $model->getSelAveArray('aveWorktimeWeek');?></th>
 							</tr>
 						</table>
+
+						<?php
+							if(is_array($model->getMonthDispData())):
+						 ?>
+						 <div class="worksheet">
+						 	<br>
+							<p><?php echo $model->getYear();?>年度月別個人データ</p>
+							<br>
+
+							 <table>
+								<tr class="record">
+									<td>月</td>
+									<td>出勤日<br>合計</td>
+									<td>週平均<br>出勤日数</td>
+									<td>欠席日数</td>
+									<td>営業日数</td>
+									<td>休憩時間</td>
+									<td>労働時間<br>合計</td>
+									<td>月平均<br>労働時間</td>
+									<td>週平均<br>労働時間</td>
+								</tr>
+							 <?php
+									foreach($model->getMonthDispData()as $key => $value){
+							 ?>
+								<tr>
+									<td><?php echo $value['name'];?></td>
+									<td><?php echo $value['workday'];?></td>
+									<td><?php echo $value['aveWorkday']?></td>
+									<td><?php echo $value['absence'];?></td>
+									<td><?php echo $value['business'];?></td>
+									<td><?php echo $value['resttime'];?></td>
+									<td><?php echo $value['worktime'];?></td>
+									<td><?php echo $value['aveWorktimeMonth'];?></td>
+									<td><?php echo $value['aveWorktimeWeek'];?></td>
+								</tr>
+
+							<?php
+							}
+							?>
+								<tr>
+									<th>合計</th>
+									<th><?php echo $model->getSelMonthSumArray('workday');?></th>
+									<th><?php echo $model->getSelSumArray('aveWorkday');?></th>
+									<th><?php echo $model->getSelMonthSumArray('absence');?></th>
+									<th><?php echo $model->getSelMonthSumArray('business');?></th>
+									<th><?php echo $model->getSelMonthSumArray('resttime');?></th>
+									<th><?php echo $model->getSelMonthSumArray('worktime');?></th>
+									<th><?php echo $model->getSelMonthSumArray('aveWorktimeMonth');?></th>
+									<th><?php echo $model->getSelMonthSumArray('aveWorktimeWeek');?></th>
+								</tr>
+								<tr>
+									<th>平均</th>
+									<th><?php echo $model->getSelMonthAveArray('workday');?></th>
+									<th><?php echo $model->getSelAveArray('aveWorkday');?></th>
+									<th><?php echo $model->getSelMonthAveArray('absence');?></th>
+									<th><?php echo $model->getSelMonthAveArray('business');?></th>
+									<th><?php echo $model->getSelMonthAveArray('resttime');?></th>
+									<th><?php echo $model->getSelMonthAveArray('worktime');?></th>
+									<th><?php echo $model->getSelMonthAveArray('aveWorktimeMonth');?></th>
+									<th><?php echo $model->getSelMonthAveArray('aveWorktimeWeek');?></th>
+								</tr>
+							</table>
+						</div>
+						<?php
+						endif;
+						?>
 						<p class="right"><button class="exportExcel">excelに出力</button>　　<button class="exportPDF">PDFに出力</button></p>
 					</div>
 				</div>
