--- a/overallWorkTime/overallWorkTime.phtml
+++ b/overallWorkTime/overallWorkTime.phtml
@@ -91,9 +91,9 @@
 							<!--表示非表示の切り替え　期間-->
 								<td id="formPeriod">
 									 開始期間
-									<input type="month" name="startDay">　
+									<input type="month" name="startDay" size="15">　
 									終了期間
-									<input type="month" name="endDay">
+									<input type="month" name="endDay" size="15">
 								</td>
 							</tr>
 						</table>
