--- a/css/content.css
+++ b/css/content.css
@@ -571,6 +571,19 @@ div#title{
 
 }
 
+.eventSquare{
+	display: inline-block;
+    width: 20%;
+    color:black;
+    height: 15px;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    font-size: 11px;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
 #eventTitle{
 	display: inline-block;
     width: 20%;
