--- a/settingRestTime/settingRestTime.phtml
+++ b/settingRestTime/settingRestTime.phtml
@@ -81,10 +81,12 @@ $data = $model->getRestTimeData();
 	 				<li><a href="../settingHoliday/settingHoliday.php">休日設定</a>
 	    				<ul></ul>
 	 				</li>
-	  				<li><a href="#">ユーザー設定</a>
+	  				<li><a href="#">管理設定</a>
 	   					<ul>
 	     					<li><a href="../updateUser/updateUser.php">ユーザー設定変更</a></li>
 	     					<li><a href="../insertUser/insertUser.php">ユーザー登録</a></li>
+	     					<li><a href="../eventList/eventList.php">セミナー一覧</a></li>
+	     					<li><a href="../insertEvent/insertEvent.php">セミナー登録</a></li>
 	   					</ul>
 	  				</li>
 	  				<li><a href="settingRestTime.php">休憩時間設定</a>
